standalone/src/main/fabric8/deployment.yml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
spec:
  replicas: 1
  template:
    spec:
      containers:
      - env:
         - name: JAVA_OPTIONS
           value: "-Xmx128m -Dswarm.bind.address=0.0.0.0"
