standalone/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: hello
spec:
  host: hello.apps.lab.example.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello
    weight: 100
  wildcardPolicy: None
